@@ -2,7 +2,6 @@ package uk.gov.hmcts.reform.adoption.adoptioncase.caseworker.event;
 
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.validation.constraints.NotNull;
-import org.apache.commons.collections4.CollectionUtils;
 import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
@@ -26,10 +25,7 @@ import uk.gov.hmcts.reform.adoption.adoptioncase.model.UserRole;
 import uk.gov.hmcts.reform.adoption.idam.IdamService;
 
 import java.time.Clock;
-import java.time.Instant;
-import java.time.LocalDate;
 import java.time.LocalDateTime;
-import java.time.ZoneId;
 import java.time.format.DateTimeFormatter;
 import java.util.ArrayList;
 import java.util.List;
@@ -46,7 +42,7 @@ import static uk.gov.hmcts.reform.adoption.testutil.TestConstants.TEST_AUTHORIZA
 import static uk.gov.hmcts.reform.adoption.testutil.TestDataHelper.caseData;
 
 @ExtendWith(MockitoExtension.class)
-public class CaseworkerSendOrReplyTest extends EventTest {
+class CaseworkerSendOrReplyTest extends EventTest {
 
     @Mock
     private HttpServletRequest httpServletRequest;
@@ -77,9 +73,6 @@ public class CaseworkerSendOrReplyTest extends EventTest {
         var caseDetails = getCaseDetails();
         caseDetails.getData().setMessageAction(MessageSendDetails.MessagesAction.SEND_A_MESSAGE);
         caseDetails.getData().setMessageSendDetails(getOpenMessageObject());
-        final var instant = Instant.now();
-        final var zoneId = ZoneId.systemDefault();
-        final var expectedDate = LocalDate.ofInstant(instant, zoneId);
         when(httpServletRequest.getHeader(AUTHORIZATION)).thenReturn(TEST_AUTHORIZATION_TOKEN);
         when(idamService.retrieveUser(TEST_AUTHORIZATION_TOKEN)).thenReturn(getCaseworkerUser());
         var result = caseworkerSendOrReply.aboutToSubmit(caseDetails, caseDetails);
@@ -118,28 +111,17 @@ public class CaseworkerSendOrReplyTest extends EventTest {
         selectedMessage.setReasonForMessage(MessageSendDetails.MessageReason.LEAVE_TO_OPPOSE.toString());
         caseDetails.getData().setSelectedMessage(selectedMessage);
         List<DynamicListElement> replyMessageList = new ArrayList<>();
-        if (CollectionUtils.isNotEmpty(caseDetails.getData().getListOfOpenMessages())) {
-            caseDetails.getData().getListOfOpenMessages().forEach(item -> {
-                if (item.getValue().getMessageStatus().equals(MessageSendDetails.MessageStatus.OPEN)) {
-                    DynamicListElement orderInfo = DynamicListElement.builder().label(item.getValue().getMessageSendDateNTime().format(
-                        DateTimeFormatter.ofPattern(SEND_N_REPLY_DATE_FORMAT)).concat(COMMA)
-                        .concat(item.getValue().getMessageReasonList().getLabel()))
-                        .code(UUID.fromString(item.getValue().getMessageId())).build();
-                    replyMessageList.add(orderInfo);
-                }
-            });
+        replyMessageList.addAll(openMessageDynamicListElements(
+            caseDetails.getData().getListOfOpenMessages()
+        ));
 
-        }
         caseDetails.getData().setReplyMsgDynamicList(DynamicList.builder().listItems(replyMessageList).value(
-            replyMessageList.get(0)).build());
-        final var instant = Instant.now();
-        final var zoneId = ZoneId.systemDefault();
-        final var expectedDate = LocalDate.ofInstant(instant, zoneId);
+            replyMessageList.getFirst()).build());
         when(httpServletRequest.getHeader(AUTHORIZATION)).thenReturn(TEST_AUTHORIZATION_TOKEN);
         when(idamService.retrieveUser(TEST_AUTHORIZATION_TOKEN)).thenReturn(getCaseworkerUser());
         var result = caseworkerSendOrReply.aboutToSubmit(caseDetails, caseDetails);
         assertThat(result.getData().getListOfOpenMessages()).hasSize(1);
-        assertThat(result.getData().getListOfOpenMessages().get(0).getValue().getMessageId()).isEqualTo(latestMessage.getMessageId());
+        assertThat(result.getData().getListOfOpenMessages().getFirst().getValue().getMessageId()).isEqualTo(latestMessage.getMessageId());
     }
 
     @Test
@@ -158,26 +140,15 @@ public class CaseworkerSendOrReplyTest extends EventTest {
         selectedMessage.setReasonForMessage(MessageSendDetails.MessageReason.LEAVE_TO_OPPOSE.toString());
         caseDetails.getData().setSelectedMessage(selectedMessage);
         List<DynamicListElement> replyMessageList = new ArrayList<>();
-        if (CollectionUtils.isNotEmpty(caseDetails.getData().getListOfOpenMessages())) {
-            caseDetails.getData().getListOfOpenMessages().forEach(item -> {
-                if (item.getValue().getMessageStatus().equals(MessageSendDetails.MessageStatus.OPEN)) {
-                    DynamicListElement orderInfo = DynamicListElement.builder().label(item.getValue().getMessageSendDateNTime().format(
-                            DateTimeFormatter.ofPattern(SEND_N_REPLY_DATE_FORMAT))
-                            .concat(COMMA).concat(item.getValue().getMessageReasonList().getLabel()))
-                            .code(UUID.fromString(item.getValue().getMessageId())).build();
-                    replyMessageList.add(orderInfo);
-                }
-            });
+        replyMessageList.addAll(openMessageDynamicListElements(
+            caseDetails.getData().getListOfOpenMessages()
+        ));
 
-        }
         caseDetails.getData().setReplyMsgDynamicList(DynamicList.builder().listItems(replyMessageList).value(
-            replyMessageList.get(0)).build());
-        final var instant = Instant.now();
-        final var zoneId = ZoneId.systemDefault();
-        final var expectedDate = LocalDate.ofInstant(instant, zoneId);
+            replyMessageList.getFirst()).build());
         when(httpServletRequest.getHeader(AUTHORIZATION)).thenReturn(TEST_AUTHORIZATION_TOKEN);
         when(idamService.retrieveUser(TEST_AUTHORIZATION_TOKEN)).thenReturn(getJudgeUser());
-        var result = caseworkerSendOrReply.aboutToSubmit(caseDetails, caseDetails);
+        caseworkerSendOrReply.aboutToSubmit(caseDetails, caseDetails);
         assertThat(caseDetails.getData().getListOfOpenMessages()).isEmpty();
         assertThat(caseDetails.getData().getClosedMessages()).hasSize(1);
 
@@ -199,5 +170,25 @@ public class CaseworkerSendOrReplyTest extends EventTest {
             .data(caseData())
             .id(1L)
             .build();
+    }
+
+    private static List<DynamicListElement> openMessageDynamicListElements(
+        List<ListValue<MessageSendDetails>> messages
+    ) {
+        if (messages == null) {
+            return List.of();
+        }
+
+        return messages.stream()
+            .map(ListValue::getValue)
+            .filter(message -> MessageSendDetails.MessageStatus.OPEN.equals(message.getMessageStatus()))
+            .map(message -> DynamicListElement.builder()
+                .label(message.getMessageSendDateNTime()
+                           .format(DateTimeFormatter.ofPattern(SEND_N_REPLY_DATE_FORMAT))
+                           .concat(COMMA)
+                           .concat(message.getMessageReasonList().getLabel()))
+                .code(UUID.fromString(message.getMessageId()))
+                .build())
+            .toList();
     }
 }
